--- a/top.css
+++ b/top.css
@@ -3,3 +3,44 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  height: 70px;
+  width: 100%;
+  background-color: #ec715f;
+}
+
+.navbar {
+  width: 1024px;
+}
+
+.nav-item {
+  font-size: 16px;
+  color: #fafafa;
+  padding-left: 30px;
+}
+
+.main-visual {
+  width: 100%;
+  height: 650px;
+  background-image: url(img/mv.png);
+}
+
+.main-visual-name {
+  font-size: 64px;
+  color: #fafafa;
+  text-align: center;
+  padding-top: 200px;
+}
+
+.main-visual-text {
+  font-size: 20px;
+  color: #fafafa;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.sabvisual {
+  background-color: #eceff1;
+  
+}
