--- a/top.html.erb
+++ b/top.html.erb
@@ -5,15 +5,44 @@
     <meta href= "UTF-8" />
     <link rel= "stylesheet" href= "top.css" />
   </head>
-  
+
   <body>
     <header>
       <nav class= "navbar">
-        <img class= "site-image" src= "img/logo.png" />
+        <img class= "site-image" src= "img/favicon.icon" src= "img/logo.png" />
         <ul>
-          <li></li>
+          <li class= "nav-item">
+            Portfolio
+          </li>
+          <li class= "nav-item">
+            Feature
+          </li>
+          <li class= "nav-item">
+            Profile
+          </li>
+          <li class= "nav-item">
+            Contact
+          </li>
         </ul>
       </nav>
     </header>
+    <div class= "main-visual">
+      <div class= "main-visual-name">Lorem Ipsum</div>
+      <div class= "main-visual-text">simply dummy text of the printing</div>
+    </div>
+    <div class= "sab-visual">
+      <div class= "sab-visual-name">Portfolio</div>
+      <div class= "sab-visual-text">
+        It is a long established fact that a reader will be distracted by the readable<br />
+        content of a page when looking at its layout. The point of using Lorem Ipsum is<br />
+        that it has a more-or-less normal distribution of letters
+      </div>
+      <div class= "sab-visual-img" src= "img/sketch.jpg"></div>
+      <div class= "sab-visual-img" src= "img/websuku.png"></div>
+      <div class= "sab-visual-img" src= "img/write.jpg"></div>
+      <div class= "sab-visual-img" src= "img/webcamp.png"></div>
+      <div class= "sab-visual-img" src= "img/talk.jpg"></div>
+      <div class= "sab-visual-img" src= "img/webcamp-mother.png"></div>
+    </div>
   </body>
 </html>
