--- a/top.css
+++ b/top.css
@@ -23,7 +23,7 @@ header {
 .main-visual {
   width: 100%;
   height: 650px;
-  background-image: url(img/mv.png);
+  background-image: url(img/code.png);
 }
 
 .main-visual-name {
