--- a/top.css
+++ b/top.css
@@ -42,5 +42,33 @@ header {
 
 .sabvisual {
   background-color: #eceff1;
-
+  width: 920px;
+  height: auto;
 }
+
+.sub-visual-name {
+  font-size: 32px;
+  color: #000000;
+  padding-top: 90px;
+  padding-bottom: 8px;
+}
+
+.sub-visual-text {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  font-size: 16px;
+  color: #000000;
+}
+
+.sub-visual-img {
+  display: flex;
+  width: 300px;
+  height: 250px;
+  margin: 0px 10px 100px 10px;
+}
+
+.feature {
+  width: 980px;
+  height: auto;
+}
+
