--- a/top.css
+++ b/top.css
@@ -42,7 +42,7 @@ header {
 
 .sabvisual {
   background-color: #eceff1;
-  width: 920px;
+  width: 100;
   height: auto;
 }
 
@@ -72,3 +72,117 @@ header {
   height: auto;
 }
 
+.feature-name {
+  font-size: 32px;
+  color: #000000;
+  border-bottom: 3px #ec715f;
+}
+
+.social {
+  width: 320px;
+  height: auto;
+  margin: 0px 10px;
+}
+
+.profile {
+  width: 100%;
+  background-color: #eceff1;
+}
+
+.profile-name {
+  font-size: 32px;
+  color: #000000;
+  border-bottom: 3px #ec715f;
+  padding-bottom: 30px;
+}
+
+.profile-text {
+  font-size: 16px;
+  color: #00000;
+}
+
+.icon-img {
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+}
+
+.my-name {
+  font-size: 20px;
+  padding-top: 30px;
+}
+
+.my-name-text {
+  font-size: 16px;
+  color: #000000;
+  padding-top: 5px;
+}
+
+.my-skills {
+  font-size: 20px;
+  padding-top: 20px;
+}
+
+.my-skills-text {
+  font-size: 16px;
+  padding-top: 5px;
+  color: #000000;
+}
+
+.contact {
+  width: 100%;
+  height: auto;
+}
+
+.contact-name {
+  font-size: 32px;
+  color: #000000;
+  padding: 90px 0px 30px 0px;
+  border-bottom: 3px #ec715f;
+}
+
+.contact-text {
+  font-size: 16px;
+  color: #000000;
+  padding-bottom: 30px;
+}
+
+.emial-name {
+  font-size: 20px;
+  padding-bottom: 5px;
+}
+
+.email-address {
+  font-size: 5px;
+}
+
+.tel-name {
+  font-size: 20px;
+  padding-bottom: 5px;
+}
+
+.tel-address {
+  font-size: 5px;
+}
+
+.sns-name {
+  font-size: 20px;
+  padding-bottom: 5px;
+}
+
+.sns-icon {
+  width: 50px;
+  height: 50px;
+  padding: 0px 20px 0px 20px;
+}
+
+footer {
+  background-color: #ec715f;
+  height: 60px;
+  width: 100%;
+}
+
+.webcamp {
+  font-size: 16px;
+  color: #fafafa;
+}
